Add left div img, setup outermost divs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="form.js" defer> </script>
 </head>
 <body>
-    
+    <div class="outermost-div">
+        <div class="left-outer-div"> 
+            
+        </div>
+
+        <div class="right-outer-div">
+
+        </div>
+    </div>
 </body>
 </html>
