--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
         </div>
 
         <div class="right-outer-div">
+            <div class="right-upper-div"> 
+                <p>This is totally a real online service. Please send your credit card information as well as your Club Penguin password. Your penguin coins are totally safe with us and we will even throw in a complimentary igloo with any purchase of fries.</p>
+                <p> You know you want to.</p>
+            </div>
+            <div class="right-middle-div"> 
 
+            </div>
+            <div class="right-lower-div"> 
+                <button> 
+                    Create Account
+                </button>
+                <p> Already have an account? Login</p>
+            </div>
         </div>
     </div>  
 </body>
