Begin styling forms

--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
 
         <div class="right-outer-div">
             <div class="right-upper-div"> 
-                <p>This is totally a real online service. Please send your credit card information as well as your Club Penguin password. Your penguin coins are totally safe with us and we will even throw in a complimentary igloo with any purchase of fries.</p>
-                <p> You know you want to.</p>
+                <p>This is totally a real online service. Please send your credit card information as well as your Club Penguin password. Your penguin coins are totally safe with us and we will even throw in a complimentary igloo with any purchase of fries. Sign up today!</p>
+                <p> You know you don't want to.</p>
             </div>
             <div class="right-middle-div"> 
-
+                <form> 
+                    <div class="form-pair"> 
+                        <label for="first">FIRST NAME</label>
+                        <input id="first" name="first" type="text">    
+                    </div>
+               
+                </form>
             </div>
             <div class="right-lower-div"> 
                 <button> 
