--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="form.js" defer> </script>
+    <script src="form.js"> </script>
 </head>
 <body>
     <div class="outermost-div">
@@ -53,8 +53,8 @@
                
                 <div class = "upper-form-div"> 
                         <div class="form-pair"> 
-                            <label for="first">EMAIL</label>
-                            <input id="email" name="email" type="email" required>   
+                            <label for="mail">EMAIL</label>
+                            <input id="mail" name="mail" type="email" required>   
                             <span class="error" aria-live="polite"></span> 
                         </div>
                         <div class="form-pair"> 
