Finish responsiveness of mobile and tablet

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             </div>
             <p class="img-credit"> Photo by Sean Lee on 
                 <a class="img-credit" href="https://unsplash.com/photos/Yli_dIlJ2Sk"> 
-                Unsplash. </a> 
-                &nbsp;Logo by Rafina Andra from <a href="https://thenounproject.com/browse/icons/term/logo/" target="_blank" class="img-credit" title="Logo Icons">Noun Project</a>
+                Unsplash</a>. Logo by Rafina Andra from <a href="https://thenounproject.com/browse/icons/term/logo/" target="_blank" class="img-credit" title="Logo Icons">Noun Project</a>
             </p> 
           
         </div>
